--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header></header>
     <div class="video-wrapper">
         <div class="display"></div>
-        <div class="display_desc"></div>
+        <div class="display_desc"> XDDD</div>
         
     </div>
 </body>
