--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Wkikipedia Api</title>
-    <meta name="author" content="rookie blue">
-    <meta name="description" content="A simple Wikipedia api site which provides a simple UI where a user can type in any information to search from Wikipedia">
+    <title>Wikipedia API</title>
+    <meta name="author" content="me :)">
+    <meta name="description" content="A simple Wikipedia api">
     
     <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Wikipedia-logo-v2.svg/2000px-Wikipedia-logo-v2.svg.png"
         type="image/x-icon">
